tests/specs/ecosystem/skyblazar/react_store/0_1_0.test
skyblazar/react-store/0.1.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2304 [ERROR]: Cannot find name 'DEFAULT_STORE_OPTIONS'.
  constructor(storeName: string, storeState: StoreState, storeActions: Actions, storeOptions = DEFAULT_STORE_OPTIONS){
                                                                                               ~~~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/store.ts:17:96

